--- a/styles.css
+++ b/styles.css
@@ -1915,10 +1915,10 @@
   @media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 1.1),
     only screen and (max-width: 600px) and (min-resolution: 97dpi) {
     #lp-pom-block-66 {
-      /* background-image: url(//); */
+      background-image: url(asset\ba5.webp);
     }
     #lp-pom-block-163 {
-      /* background-image: url(//); */
+      background-image: url(C:\_git\Websites\DivineHome\asset\ba6.webp);
     }
   }
   @media only screen and (max-width: 600px) and (-webkit-min-device-pixel-ratio: 2.1),
